vm/operator/ing-vlsingle.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
  name: vlsigle
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: vlsingle.node-01
    http:
      paths:
      - backend:
          service:
            name: vlsingle-vl-single
            port:
              number: 9428
        path: /
        pathType: Prefix
