vm/operator/ing-vmsingle.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vmsingle
  namespace: monitoring
spec:
  ingressClassName: traefik
  rules:
  - host: vm-single.node-02
    http:
      paths:
      - backend:
          service:
            name: vmsingle-vm-single
            port: 
              number: 8429
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vlsingle
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
  - host: vl-single.kw-home
    http:
      paths:
      - backend:
          service:
            name: vlsingle-vl-single
            port: 
              number: 9428
        path: /
        pathType: Prefix
